7295 - Fixed contrast for select files button

--- a/arches/app/media/css/arches.css
+++ b/arches/app/media/css/arches.css
@@ -7840,7 +7840,7 @@ span.file-upload-clear-filter {
 }
 
 .btn-file-select {
-    background: rgb(138, 115, 255);
+    background: #4824FF;
     color: #fff;
     border: 1px solid rgb(89, 56, 255);
     border-radius: 2px;
